# nibbler

./: .gitignore  AEntity.hpp  CMakeLists.txt  Gamestate.cpp  Gamestate.hpp  Makefile  ReadLib.class.cpp  ReadLib.class.hpp  daemon  main.cpp  main.hpp  nibbler  nibbler_log.txt  package-lock.json  package.json
CMake/: CMakeCache.txt  CMakeLists.txt  FindVTK.cmake  Makefile  NibblerConfig.h  NibblerConfig.h.in  build  cmake_install.cmake
OpenGL/: OpenGL.class.hpp
config/: NibblerConfig.h
environ/: Environ.class.hpp  Envrion.class.cpp
environ/OpenGL/: OpenGL.class.cpp  OpenGL.class.hpp
environ/SDL/: SDL.class.cpp  SDL.class.hpp
environ/ncurses/: NcursesWindow.cpp  NcursesWindow.hpp
environ/ncursesfs/: NcursesFSWindow.cpp  NcursesFSWindow.hpp
host/: AI.cpp  AI.hpp  Coord.cpp  GameState.cpp  GameState.hpp  Gamestate.cpp  Gamestate.hpp  IDisplay.hpp  Part.cpp  Part.hpp  ReadLib.class.cpp  ReadLib.class.hpp  Snake.cpp  Snake.hpp  main.cpp  main.hpp  run.cpp
lib/: install.sh  lib.txt  uninstall.sh
lib/OpenGL/: OpenGL.hpp  init.cpp  init.sh
lib/WebGL/: init.cpp  init.sh
lib/vtk/: CMakeCache.txt  CTestCustom.cmake  UseVTK.cmake  VTKCompileToolsConfig.cmake  cmake_install.cmake  init.cpp  init.sh
lib/vtk/CMake/: Makefile  VTKConfig.cmake  VTKData_config.cmake  VTKTargets.cmake  unix_path.sh
lib/vtk/CMake/Charts/Core/: cmake_install.cmake
lib/vtk/CMake/Common/Color/: Makefile
lib/vtk/CMake/Remote/: cmake_install.cmake
lib/vtk/Charts/Core/: Makefile
lib/vtk/Common/Color/: cmake_install.cmake
lib/vtk/Common/ComputationalGeometry/: cmake_install.cmake
lib/vtk/Common/Core/: Makefile  cmake_install.cmake
lib/vtk/Common/DataModel/: Makefile
lib/vtk/Common/ExecutionModel/: cmake_install.cmake
lib/vtk/Common/Misc/: Makefile
lib/vtk/Common/Transforms/: Makefile  cmake_install.cmake
lib/vtk/Domains/Chemistry/: Makefile  cmake_install.cmake  vtkChemistryConfigure.h
lib/vtk/Domains/ChemistryOpenGL2/: cmake_install.cmake
lib/vtk/Filters/Core/: cmake_install.cmake
lib/vtk/Filters/Extraction/: Makefile
lib/vtk/Filters/FlowPaths/: Makefile
lib/vtk/Filters/General/: cmake_install.cmake
lib/vtk/Filters/Generic/: Makefile  cmake_install.cmake
lib/vtk/Filters/Geometry/: Makefile  cmake_install.cmake
lib/vtk/Filters/Hybrid/: cmake_install.cmake
lib/vtk/Filters/Modeling/: Makefile  cmake_install.cmake
lib/vtk/Filters/Parallel/: Makefile  cmake_install.cmake
lib/vtk/Filters/ParallelImaging/: Makefile  cmake_install.cmake
lib/vtk/Filters/Programmable/: Makefile  cmake_install.cmake
lib/vtk/Filters/SMP/: Makefile
lib/vtk/Filters/Selection/: Makefile
lib/vtk/Filters/Sources/: cmake_install.cmake
lib/vtk/Filters/Statistics/: Makefile
lib/vtk/Filters/Texture/: Makefile
lib/vtk/Filters/Verdict/: Makefile
lib/vtk/Geovis/Core/: Makefile
lib/vtk/IO/Core/: Makefile
lib/vtk/IO/EnSight/: Makefile  cmake_install.cmake
lib/vtk/IO/Exodus/: Makefile
lib/vtk/IO/Export/: Makefile
lib/vtk/IO/Geometry/: cmake_install.cmake
lib/vtk/IO/Image/: cmake_install.cmake
lib/vtk/IO/Import/: Makefile  cmake_install.cmake
lib/vtk/IO/Infovis/: cmake_install.cmake
lib/vtk/IO/LSDyna/: cmake_install.cmake
lib/vtk/IO/MINC/: Makefile  cmake_install.cmake
lib/vtk/IO/Parallel/: Makefile  cmake_install.cmake
lib/vtk/IO/ParallelXML/: Makefile
lib/vtk/IO/Video/: Makefile
lib/vtk/IO/XML/: Makefile  cmake_install.cmake
lib/vtk/Imaging/Core/: Makefile  cmake_install.cmake
lib/vtk/Imaging/Fourier/: Makefile
lib/vtk/Imaging/General/: Makefile  cmake_install.cmake
lib/vtk/Imaging/Hybrid/: cmake_install.cmake
lib/vtk/Imaging/Morphological/: Makefile
lib/vtk/Imaging/Sources/: cmake_install.cmake
lib/vtk/Imaging/Statistics/: Makefile  cmake_install.cmake
lib/vtk/Imaging/Stencil/: Makefile  cmake_install.cmake
lib/vtk/Infovis/Layout/: Makefile  cmake_install.cmake
lib/vtk/Interaction/Style/: Makefile
lib/vtk/Interaction/Widgets/: Makefile  cmake_install.cmake
lib/vtk/Parallel/Core/: Makefile  cmake_install.cmake
lib/vtk/Remote/: Makefile
lib/vtk/Rendering/Annotation/: Makefile  cmake_install.cmake
lib/vtk/Rendering/Context2D/: Makefile
lib/vtk/Rendering/Core/: cmake_install.cmake
lib/vtk/Rendering/FreeType/: cmake_install.cmake
lib/vtk/Rendering/Image/: cmake_install.cmake
lib/vtk/Rendering/LOD/: cmake_install.cmake
lib/vtk/Rendering/Label/: Makefile
lib/vtk/Rendering/OpenGL2/: Makefile  vtkRenderingOpenGL2ObjectFactory.cxx
lib/vtk/Rendering/Volume/: cmake_install.cmake
lib/vtk/Rendering/VolumeOpenGL2/: Makefile
lib/vtk/Utilities/DICOMParser/: Makefile
lib/vtk/Utilities/EncodeString/: Makefile
lib/vtk/Utilities/HashSource/: Makefile  cmake_install.cmake
lib/vtk/Utilities/KWSys/: Makefile
lib/vtk/Utilities/MetaIO/: cmake_install.cmake
lib/vtk/Views/Context2D/: Makefile  cmake_install.cmake
lib/vtk/Views/Core/: Makefile
lib/vtk/Views/Infovis/: Makefile  cmake_install.cmake
ncurses/: NcursesWindow.cpp  NcursesWindow.hpp
shared/: Coord.cpp  Coord.hpp  Direction.cpp  Direction.hpp  IDisplay.hpp  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp
tests/VTK/: CylinderRenderingProperties.cpp
(+196 files in other folders)
